[package]
name = "db_benches"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.11.0"
async-attributes = "1.1.2"
bytes = { version = "1.0.1", features = ["serde"] }
rocksdb = "0.18.0"
#cacache = "10.0.1"
rand = "~0.8.5"
#microkv = "0.2.8"
rayon = "1.5.1"
heed = "0.11.0"
persy = "1.2.6"
futures = "~0.3.13"

[dependencies.tokio]
version = "~1.17.0"
features = ["fs", "io-util", "macros", "rt", "rt-multi-thread", "sync"]